# fuelmap

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
fie/: __init__.py  cli.py  config.py  container.py  context.py  observability.py  record.py  wsgi.py
fie/api/: __init__.py  app.py  auth.py  routes.py  schemas.py
fie/collection/: __init__.py  collector.py
fie/confidence/: __init__.py  engine.py
fie/data/: known_sources.json  stations.json
fie/derivation/: __init__.py  engine.py
fie/discovery/: __init__.py  base.py  engine.py  models.py  strategies.py
fie/matching/: __init__.py  engine.py  geo.py
fie/models/: __init__.py  adjustment.py  enums.py  evidence.py  station.py  verification.py
fie/normalization/: __init__.py  engine.py  text.py  timestamps.py  vocab.py
fie/pipeline/: __init__.py  orchestrator.py
fie/providers/: __init__.py  adjustments.py  base.py  brand_websites.py  facebook.py  gaswatch.py  generic.py  http.py  ocr.py  parsing.py  registry.py
fie/resolution/: __init__.py  engine.py
fie/stationdb/: __init__.py  repository.py
fie/store/: __init__.py  price_store.py
fie/verification/: __init__.py  engine.py
scripts/: import_gaswatch_stations.py  migrate_sqlite_to_postgres.py
web/: app.js  index.html  styles.css
