[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fuel-intelligence-engine"
version = "0.1.3"
description = "Fuel Intelligence Engine (FIE) — evidence-based verification engine for fuel pump prices"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.7",
    "beautifulsoup4>=4.12",
    # WSGI adapter for hosts like PythonAnywhere.
    "a2wsgi>=1.10",
    # Lets pydantic evaluate modern `X | Y` annotations on Python < 3.10.
    "eval-type-backport>=0.2; python_version < '3.10'",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
]
postgres = [
    "psycopg[binary,pool]>=3.2",
]

[project.scripts]
fie = "fie.cli:main"

[tool.setuptools.packages.find]
include = ["fie*"]

[tool.setuptools.package-data]
fie = ["data/*.json", "py.typed"]
